--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,3 @@
 <%layout('layouts/boilerplate') %>
-<h1>HOME OF WANDELAPP!</h1>
+<h1>THUISBASIS VAN JORRITS WANDELAPP!</h1>
+<h2>(Werk in uitvoering)</h2>
