Storing and showing image links

--- a/views/wandelingen/new.ejs
+++ b/views/wandelingen/new.ejs
@@ -39,7 +39,7 @@
                         <span class="input-group-text" id="afstand-label">km</span>
                     </div>
                 </div>
-                <input type="file" name="foto" id="" multiple>
+                <input type="file" name="plaatje" id="" multiple>
                 <!-- <div class="mb-3">
                     <label class="form-label" for="foto">Foto (url)</label>
                     <input class="form-control" type="text" id="foto" name="wandeling[foto]" required>
@@ -70,8 +70,7 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="beschrijving">Beschrijving</label>
-                    <textarea class="form-control" type="text" id="beschrijving" name="wandeling[beschrijving] required"
-                        required></textarea>
+                    <textarea class="form-control" type="text" id="beschrijving" name="wandeling[beschrijving]" required></textarea>
                     <div class="valid-feedback">
                         Ziet er goed uit!
                     </div>
