--- a/views/wandelingen/show.ejs
+++ b/views/wandelingen/show.ejs
@@ -3,10 +3,25 @@
 
 <div class="row">
     <div class="col-6">
-        <div class="card mb-3">
-            <% for (let plaatje of wandeling.plaatjes) { %>
-                <img src="<%=plaatje.url%>" class="card-img-top" alt="Een foto van de wandeling">
+        <div id="wandelingCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <% wandeling.plaatjes.forEach((plaatje, i)=> {%>
+                    <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+                        <img src="<%=plaatje.url%>" class="d-block w-100" alt="">
+                    </div>
+                    <% }); %>
+            </div>
+            <% if(wandeling.plaatjes.length> 1) {%>
+                <a class="carousel-control-prev" href="#wandelingCarousel" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#wandelingCarousel" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </a>
                 <% } %>
+        </div>
             <div class="card-body">
                 <h5 class="card-title"><%=wandeling.naam%>, <%= wandeling.gebied %>, <%= wandeling.provincie %> </h5>
 
