--- a/views/wandelingen/index.ejs
+++ b/views/wandelingen/index.ejs
@@ -8,7 +8,7 @@
 <div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
-            <img class="img-fluid" src="<%=wandeling.foto%>" alt="">
+            <img class="img-fluid" src="<%=wandeling.plaatjes[0].url%>" alt="">
         </div>
         <div class="col-md-8">
             <div class="card-body">
