Update multiple images works

--- a/views/wandelingen/new.ejs
+++ b/views/wandelingen/new.ejs
@@ -39,7 +39,6 @@
                         <span class="input-group-text" id="afstand-label">km</span>
                     </div>
                 </div>
-                <input type="file" name="plaatje" id="" multiple>
                 <!-- <div class="mb-3">
                     <label class="form-label" for="foto">Foto (url)</label>
                     <input class="form-control" type="text" id="foto" name="wandeling[foto]" required>
@@ -76,6 +75,10 @@
                     </div>
                 </div>
                 <div class="mb-3">
+                    <label for="plaatje" class="form-label">Foto's toevoegen</label>
+                    <input class="form-control" type="file" id="plaatje" name="plaatje" multiple>
+                    </div>
+                    <div class="mb-3">
                     <button class="btn btn-success">Voeg toe</button>
                 </div>
             </form>
