--- a/views/wandelingen/edit.ejs
+++ b/views/wandelingen/edit.ejs
@@ -46,10 +46,6 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="plaatje">Voeg foto's toe</label>
-                <input type="file" name="plaatje" id="plaatje" multiple>
-            </div>
-            <div class="mb-3">
                 <label class="form-label" for="bewegwijzering">Kleur bewegwijzering</label>
                 <input class="form-control" type="text" id="bewegwijzering" name="wandeling[bewegwijzering]"
                     value="<%=wandeling.bewegwijzering%>" required>
@@ -79,6 +75,10 @@
                 </div>
             </div>
             <div class="mb-3">
+                <label for="plaatje" class="form-label">Extra foto's toevoegen</label>
+                <input class="form-control" type="file" id="plaatje" name="plaatje" multiple>
+                </div>
+                <div class="mb-3">
                 <button class="btn btn-info">Opslaan</button>
             </div>
         </form>
