--- a/views/wandelingen/edit.ejs
+++ b/views/wandelingen/edit.ejs
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="plaats">Plaats</label>
+                <label class="form-label" for="plaats">Adres (straatnaam/plaats)</label>
                 <input class="form-control" type="text" id="plaats" name="wandeling[plaats]"
                     value="<%=wandeling.plaats%>" required>
                 <div class="valid-feedback">
