--- a/views/wandelingen/index.ejs
+++ b/views/wandelingen/index.ejs
@@ -1,4 +1,5 @@
 <%layout('layouts/boilerplate') %>
+<div id="map" style="width: 100%; height: 500px"></div>
 <h1>Alle wandelingen</h1>
 <div>
     <a href="/wandelingen/new">Voeg nieuwe wandeling toe</a>
@@ -26,3 +27,9 @@
     </div>
 </div>
 <% } %>
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const wandelingen = { features: <%-JSON.stringify(wandelingen) %>}
+</script>
+
+<script src="/js/clusterMap.js"></script>
