--- a/views/wandelingen/index.ejs
+++ b/views/wandelingen/index.ejs
@@ -1,5 +1,5 @@
 <%layout('layouts/boilerplate') %>
-<div id="map" style="width: 100%; height: 500px"></div>
+<div id="cluster-map"></div>
 <h1>Alle wandelingen</h1>
 <div>
     <a href="/wandelingen/new">Voeg nieuwe wandeling toe</a>
